--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "test1",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@lucyderojas/menu13-next",
+  "version": "0.0.3",
+  "private": false,
+  "main": "dist/index.js",
+  "files": ["README.MD","dist"],
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "peerDependencies": { "next": "^13.1.3",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rimraf dist",
+    "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__",
+    "compileAndPublic":"npm run compile && npm publish --access=public"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "cross-env": "^7.0.3"
   }
 }
